syntax = "proto3";

option csharp_namespace = "IdentityServer.Protos";

message DeviceCodes{
	string UserCode = 1;
	string DeviceCode = 2;
	string SubjectId = 3;
	string SessionId = 4;
	string ClientId = 5;
	string Description = 6;
	date CreationTime = 7;
	date Expiration = 8;
	string Data = 9;
}
message IdentityResourceClaims{
	int32 id = 1;
	string Type = 2;
	int32 IdentityResourceId = 3;
}
message IdentityResourceProperties{
	int32 id = 1;
	string Key = 2;
	string Value = 3;
	int32 IdentityResourceId = 4;
}
message IdentityResources{
	int32 id = 1;
	bool Enabled = 2;
	string Name = 3;
	string DisplayName = 4;
	string Description = 5;
	bool Required = 6;
	bool Emphasize = 7;
	bool ShowInDiscoveryDocument = 8;
	date Created = 9;
	date Updated = 10;
	bool NonEditable = 11;
}
message PersistedGrants{
 string Key = 1;
 string Type = 2;
 string SubjectId = 3;
 string SessionId = 4;
 string ClientId = 5;
 string Description = 6;
 date CreationTime = 7;
 date Expiration = 8;
 date ConsumedTime = 9;
 string Data = 10;
}